dist_man1_MANS=

if BUILD_ANDIACOIND
  dist_man1_MANS+=andiacoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=andiacoin-qt.1
endif

if BUILD_ANDIACOIN_CLI
  dist_man1_MANS+=andiacoin-cli.1
endif

if BUILD_ANDIACOIN_TX
  dist_man1_MANS+=andiacoin-tx.1
endif

if BUILD_ANDIACOIN_UTIL
  dist_man1_MANS+=andiacoin-util.1
endif

if ENABLE_WALLET
if BUILD_ANDIACOIN_WALLET
  dist_man1_MANS+=andiacoin-wallet.1
endif
endif
